Add authorization screen

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 org.gradle.parallel=true
+
+# comment this or change this for your local jdk path for gradlew to work
+org.gradle.java.home=/Users/gmkornilov/Library/Java/JavaVirtualMachines/corretto-11.0.13/Contents/Home
