--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ kotlin.code.style=official
 org.gradle.parallel=true
 
 # comment this or change this for your local jdk path for gradlew to work
-org.gradle.java.home=/Users/gmkornilov/Library/Java/JavaVirtualMachines/corretto-11.0.13/Contents/Home
+# org.gradle.java.home=/Users/gmkornilov/Library/Java/JavaVirtualMachines/corretto-11.0.13/Contents/Home
